Bug fixing: id changed to email in update, permissions improved, error responses